# open-chatui

./: .gitignore  CLAUDE.md  Cargo.toml  MIGRATION_GUIDE.md  Makefile.new  TAURI_INTEGRATION_QUICKSTART.md  WORKSPACE_SETUP.md
backend/: Cargo.toml
frontend/: package.json
frontend/src/lib/: api-integration.js  tauri-bridge.js  tauri-http-proxy.js  tauri-integration.js  tauri-seamless-integration.js  usage-example.js
frontend/src/routes/: +layout.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backend_integration.rs  backend_routes.rs  bridge.rs  file_manager.rs  knowledge_search.rs  main.rs  pipeline_executor.rs  socket_bridge.rs  socket_commands.rs
