[workspace]
resolver = "2"
members = [
    "backend",
    "src-tauri"
]

[workspace.package]
version = "0.9.6"
authors = ["OpenWebUI Contributors"]
edition = "2021"
homepage = "https://github.com/sternelee/open-chatui"
repository = "https://github.com/sternelee/open-chatui"
license = "MIT"

[workspace.dependencies]
# Web framework
actix-web = { version = "4", features = ["cookies", "compress-gzip"] }
actix-files = "0.6"
actix-cors = "0.7"
actix-service = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "json",
    "chrono",
    "uuid",
    "migrate"
], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Configuration and logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Utilities
regex = "1.11"
url = "2.5"
urlencoding = "2.1"
mime = "0.3"

# OpenAI integration
async-openai = "0.30.1"

# Tauri dependencies
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-websocket = "2"
tauri-plugin-updater = { version = "2" }

# Workspace profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true