[package]
name = "open-coreui-desktop"
version = "0.9.6"
description = "Open CoreUI Desktop Application"
authors = ["xxnuo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_coreui_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2.5.2"
tauri-plugin-websocket = "2"
tauri-plugin-updater = { version = "2", optional = true }

# Core backend dependencies
actix-web = { version = "4", features = ["cookies", "compress-gzip"] }
actix-files = "0.6"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "json",
    "chrono",
    "uuid",
    "migrate"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Configuration and logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Utilities
regex = "1.11"
url = "2.5"
urlencoding = "2.1"
mime = "0.3"

# OpenAI integration
async-openai = "0.30.1"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

