[package]
name = "open-coreui-desktop"
version.workspace = true
description = "Open CoreUI Desktop Application"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_coreui_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri dependencies
tauri = { workspace = true }
tauri-plugin-opener = "2"
tauri-plugin-http = "2.5.2"
tauri-plugin-websocket = "2"
tauri-plugin-updater = { workspace = true, optional = true }

# Core backend dependencies
actix-web = { version = "4", features = ["cookies", "compress-gzip"] }
actix-files = { workspace = true }
actix-cors = { workspace = true }
actix-service = "2"
futures = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }

# Authentication & Security
jsonwebtoken = { workspace = true }
uuid = { workspace = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Configuration and logging
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
regex = { workspace = true }
url = { workspace = true }
urlencoding = "2.1"
mime = { workspace = true }

# OpenAI integration
async-openai = { workspace = true }


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { workspace = true }

